[package]
name = "tonic_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"


[dependencies]
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
